--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -25,8 +25,7 @@
             <thead class=" text-primary">
               <tr>
                 <th>No</th>
-                <th>Calon Ketua</th>
-                <th>Calon Wakil Ketua</th>
+                <th>Calon Ketua & Wakil Ketua</th>
                 <th></th>
               </tr>
             </thead>
@@ -35,7 +34,6 @@
                 <tr>
                   <td><%= idx+1 %></td>
                   <td><%= post.name_1 %></td>
-                  <td><%= post.name_2 %></td>
                   <td class="text-right">
                     <%= link_to 'Edit', edit_admin_post_path(post), class: 'btn btn-primary' %>
                     <%= link_to 'Delete', admin_post_path(post), class: 'btn btn-danger', data: { confirm: "Are you sure?" },method: :delete %>
