--- a/app/views/user/homes/index.html.erb
+++ b/app/views/user/homes/index.html.erb
@@ -19,7 +19,10 @@
             <table border="0">
               <tbody>
                 <% misi.each_with_index do |value, num| %>
-                  <tr><td><%= num+1 %>.</td><td></td><td><%= value.split('.').last %></td></tr>
+                  <tr>
+                    <td></td>
+                    <td><%= "#{num+1}. #{value.split('.').last}." %></td>
+                  </tr>
                 <% end %>
               </tbody>
             </table>
