--- a/app/views/user/devise/registrations/new.html.erb
+++ b/app/views/user/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
               <%= f.password_field :password_confirmation, class: 'form-control', id: 'confirm-password', placeholder: 'confirm-password', required: true %>
             </div>
             <div class="form-group" id="avatar_data">
-              <%= f.label :avata, 'Photo User' %><br>
+              <%= f.label :avata, 'Photo KTM' %><br>
               <%= f.hidden_field :avatar, value: f.object.cached_avatar_data %>
               <%= f.file_field :avatar, id: 'file', onchange: 'preview()', required: true %>
               <img src="" id="frame" width="200" height="150">
