--- a/app/views/user/homes/tutorial.html.erb
+++ b/app/views/user/homes/tutorial.html.erb
@@ -2,7 +2,7 @@
 <hr style="height:5px;border-width:3;color:#000000;background-color:#000000;width:50%">
 <div class="container">
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0"></iframe>
+    <iframe src="<%= Rails.cache.fetch("video_tutorial") %>" width="640" height="480" allow="autoplay"></iframe>
   </div>
   <br><br><br><br>
 </div>
