show jumlah vote post by user date voted

--- a/app/views/admin/homes/index.html.erb
+++ b/app/views/admin/homes/index.html.erb
@@ -103,3 +103,65 @@
     </div>
   <% end %>
 </div>
+
+<div class="row">
+  <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+    <div class="card card-stats">
+      <div class="card-header card-header-success card-header-icon">
+        <div class="card-icon">
+          <i class="material-icons">content_paste</i>
+        </div>
+        <p class="card-category">Jumlah Vote <%= @tanggal_2 %></p>
+        <h3 class="card-title"><%= @vote_tanggal_2 %>
+          <small></small>
+        </h3>
+      </div>
+      <div class="card-footer">
+        <div class="stats">
+          <i class="material-icons text-warning">warning</i>
+          <!-- <a href="<%#= show_vote_post_admin_home_path(post) %>" class="warning-link">Show Post</a> -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+    <div class="card card-stats">
+      <div class="card-header card-header-success card-header-icon">
+        <div class="card-icon">
+          <i class="material-icons">content_paste</i>
+        </div>
+        <p class="card-category">Jumlah Vote <%= @tanggal_3 %></p>
+        <h3 class="card-title"><%= @vote_tanggal_3 %>
+          <small></small>
+        </h3>
+      </div>
+      <div class="card-footer">
+        <div class="stats">
+          <i class="material-icons text-warning">warning</i>
+          <!-- <a href="<%#= show_vote_post_admin_home_path(post) %>" class="warning-link">Show Post</a> -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+    <div class="card card-stats">
+      <div class="card-header card-header-success card-header-icon">
+        <div class="card-icon">
+          <i class="material-icons">content_paste</i>
+        </div>
+        <p class="card-category">Jumlah Vote <%= @tanggal_4 %></p>
+        <h3 class="card-title"><%= @vote_tanggal_4 %>
+          <small></small>
+        </h3>
+      </div>
+      <div class="card-footer">
+        <div class="stats">
+          <i class="material-icons text-warning">warning</i>
+          <!-- <a href="<%#= show_vote_post_admin_home_path(post) %>" class="warning-link">Show Post</a> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
